# cloneable_dyn

./: Cargo.toml  README.md
src/: clone_dyn_derive.rs  dyn_cloneable.rs  dyn_cloneable_for_traits.rs  lib.rs  utils.rs
tests/: derive_dyn_clone_enum.rs  derive_dyn_clone_named_struct.rs  derive_dyn_clone_unnamed_struct.rs
tests/ui/compile_errors/: derive_on_union.rs  derive_on_union.stderr
