[package]
name = "cloneable_dyn"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dynamic"]
description = "Macros to make structs and enums clonable that use dyn Objects"
readme = "README.md"
repository = "https://github.com/StamesJames/cloneable_dyn"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.27"
syn = { version = "2.0.15", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.80"
